<resources>
    <string name="app_name">Atma Library</string>
    <string name="peminjaman">Peminjaman</string>
    <string name="pengembalian">Pengembalian</string>
    <string name="settings">Settings</string>
    <string name="judul_buku">Judul Buku:</string>
    <string name="genre_buku">Genre Buku:</string>
    <string name="nomor_seri_buku">Nomor Seri Buku:</string>
    <string name="daftar_buku_yang_dipinjam">Daftar Buku yang Sedang Dipinjam</string>
    <string name="daftar_buku_yang_tersedia">Daftar Buku yang Tersedia</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="versi_app">Versi App</string>
    <string name="versi">Versi 2.0.0</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="exit">Exit</string>
    <string name="night_mode">Night Mode</string>
    <string name="tampilan_background">Tampilan Background</string>
    <string name="atma_library">Atma Library</string>
    <string name="scan">Scan Now</string>
    <string name="location">LOCATION</string>

    <!-- Map Preferencess -->
    <string name="mapbox_access_token">pk.eyJ1IjoibmljZWRzb24yMyIsImEiOiJja2ZtMjV2YTQxYmhpMzBvMDdkYWRreWZqIn0.2pOKmyQUat_aCBT8ENz0hw</string>
    <string name="our_location">Our Location</string>
    <string name="lokasi">Lokasi :</string>
    <string name="perpustakaan_uajy">Perpustakaan Atma Jaya Yogyakarta</string>
    <string name="alamat">Alamat :</string>
    <string name="jl_babarsari">Jl. Babarsari No.44, Janti, Caturtunggal</string>
    <string name="jadwal">Jadwal :</string>
    <string name="hari_jam">Senin - Jumat: 08:00 - 19:00 WIB\nSabtu: 08:00 - 12:00 WIB\nMinggu: 09:00 - 17:00 WIB</string>
    <string name="start_navigation">Start navigation</string>
    <string name="signup">Sign Up</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="nama">Nama</string>
    <string name="npm">NPM</string>
    <string name="fakultas">Fakultas</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="register">Register</string>
    <string name="profile">PROFILE</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="hapus">Hapus</string>
    <string name="daftar_buku_yang_disumbangkan">Daftar Buku yang Disumbangkan</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="pilih_media">Pilih Media</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">Kamera</string>
    <string name="status">Status:</string>
    <string name="tanggal">Tanggal Kembali:</string>
</resources>