<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:gravity="center"
    android:minWidth="1000dp"
    android:background="@color/zxing_transparent"
    android:minHeight="450dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="1000dp"
        android:layout_margin="10dp"
        android:minHeight="450dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">

                <com.github.siyamed.shapeimageview.RoundedImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:id="@+id/imgDialog"
                    app:siRadius="2dp"
                    app:siBorderWidth="2dp"
                    app:siBorderColor="#000000"
                    app:siSquare="true">
                </com.github.siyamed.shapeimageview.RoundedImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:layout_height="match_parent"
                            android:id="@+id/judulDialog"
                            android:hint="@string/judul_buku"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:layout_height="match_parent"
                            android:id="@+id/genreDialog"
                            android:hint="@string/genre_buku"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:layout_height="match_parent"
                            android:id="@+id/seriDialog"
                            android:hint="@string/nomor_seri_buku"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/tanggal_kembali"
                            android:layout_height="match_parent"
                            android:hint="@string/tanggal"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/edtBtn"
                    android:text="@string/edit"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>